--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@material-tailwind/react": "^2.1.9",
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.2",
+    "dompurify": "^3.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
